fast-summary-tx-invalid/src/main/java/com/example/tx/invalid/WebConfig.java
package com.example.tx.invalid;

import org.springframework.context.annotation.ComponentScan;

@ComponentScan("com.example.tx.invalid.app.controller")
public class WebConfig {
}
